update config setup

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Builder Components</title>
-		<div data-builder-config data-infura-key="cfe94335ab724354835fefb844aa0db7" />
+		<div
+			data-builder-config
+			data-chain="mainnet"
+			data-infura-key="cfe94335ab724354835fefb844aa0db7"
+		/>
 	</head>
 	<body>
 		<div data-builder-component="connectButton"></div>
 
 		<div
 			data-builder-component="auctionHero"
-			data-chain="GOERLI"
-			data-dao-collection="0x73e769fcd28e66c43f785f5479b4ba8ef9886863"
+			data-dao-collection="0xdf9b7d26c8fc806b1ae6273684556761ff02d422"
 		></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
