switch testing dao

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Builder Components</title>
 		<div
 			data-builder-config
-			data-chain="mainnet"
+			data-chain="goerli"
 			data-infura-key="cfe94335ab724354835fefb844aa0db7"
 		/>
 	</head>
@@ -15,7 +15,7 @@
 
 		<div
 			data-builder-component="auctionHero"
-			data-dao-collection="0xdf9b7d26c8fc806b1ae6273684556761ff02d422"
+			data-dao-collection="0x73e769fcd28e66c43f785f5479b4ba8ef9886863"
 		></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
