init memberlist components + logic

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<body>
 		<div data-builder-component="connect-button"></div>
 		<div data-builder-component="auction-hero"></div>
+		<div data-builder-component="member-list"></div>
+
 		<div
 			data-builder-component="collection-list"
 			data-sort-direction="asc"
