--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 	</head>
 	<body>
 		<div data-builder-component="connect-button"></div>
-		<div data-builder-component="auction-hero"></div>
-		<div data-builder-component="member-list"></div>
+		<div data-builder-component="treasury"></div>
+		<div data-builder-component="auction-hero" data-theme="dark"></div>
+		<div data-builder-component="member-list" data-rows="10"></div>
 
 		<div
 			data-builder-component="collection-list"
 			data-sort-direction="asc"
-			data-items-per-row="4"
+			data-rows="10"
+			data-items-per-row="6"
 		></div>
 
 		<script type="module" src="/src/main.tsx"></script>
