upgrade walletconnect and rainbowkit, use viem

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -9,6 +9,7 @@
 			data-chain="goerli"
 			data-infura-key="cfe94335ab724354835fefb844aa0db7"
 			data-dao-collection="0x73e769fcd28e66c43f785f5479b4ba8ef9886863"
+			data-project-id=""
 		/>
 	</head>
 	<body>
